# iaifi-hackathon-2025

./: .gitignore  404.html  README.md  index.html  pyproject.toml  requirements.txt  search.html  sitemap.xml
data/: download_raw.py
data/source/: labels_basic.json  labels_master.json  mean_std.json
datasets/: index.html
docs/: mkdocs.yml
docs/docs/: datasets.md  getting-started.md  index.md
getting-started/: index.html
nebula/commons/: __init__.py  logger.py  setup.py
nebula/data/: __init__.py  base.py  class_weights.py  dataset.py  gz2.py
nebula/models/: cnn.py  enn.py  model_factory.py
notebooks/: dataset-exploration.ipynb
outputs/enn_N16_ep100_seed42_focal_20250830-065912/: config.yaml
outputs/enn_N16_ep100_seed42_focal_20250830-065912/losses/: blur_vals-enn.npy  eta_1_vals-enn.npy  eta_2_vals-enn.npy  js_distances-enn.npy  losses-enn.npy  max_distances-enn.npy  train_DA_losses-enn.npy  train_classification_losses-enn.npy  val_DA_losses-enn.npy  val_classification_losses-enn.npy  val_losses-enn.npy
outputs/enn_N16_ep100_seed42_focal_20250830-065912/results/: da_metrics.yaml
scripts/: config_cnn.yaml  config_enn.yaml  dataset.py  test.py  train.py
scripts/data/: gz2hart.sh  llustrisTNG.sh
search/: search_index.json
